@@ -9,7 +9,7 @@ sig
   val name: unit -> string
   val welcome: unit -> string
   val get_keywords: unit -> Keyword.keywords
-  val init: bool -> bool -> Path.T -> string -> bool -> string -> (string * string) list ->
+  val init: bool -> bool -> Path.T -> string -> string -> (string * string) list ->
     (Path.T * Path.T) list -> Path.T -> string -> string * string -> bool -> unit
   val shutdown: unit -> unit
   val finish: unit -> unit
@@ -42,7 +42,7 @@ fun get_keywords () = ! keywords;
 
 (* init *)
 
-fun init build info info_path doc doc_graph doc_output doc_variants doc_files graph_file
+fun init build info info_path doc doc_output doc_variants doc_files graph_file
     parent (chapter, name) verbose =
   if #name (! session) <> parent orelse not (! session_finished) then
     error ("Unfinished parent session " ^ quote parent ^ " for " ^ quote name)
@@ -52,7 +52,7 @@ fun init build info info_path doc doc_graph doc_output doc_variants doc_files gr
       val _ = session_finished := false;
     in
       Present.init build info info_path (if doc = "false" then "" else doc)
-        doc_graph doc_output doc_variants doc_files graph_file (chapter, name)
+        doc_output doc_variants doc_files graph_file (chapter, name)
         verbose (map Thy_Info.get_theory (Thy_Info.get_names ()))
     end;
 
